--- a/Components/Details.xaml
+++ b/Components/Details.xaml
@@ -39,11 +39,11 @@
 
             <TextBlock Grid.Row="0" FontSize="32" Text="{Binding Name}" />
 
-            <Grid Grid.Row="1" Margin="0 20 0 0 ">
+            <Grid Grid.Row="1" Margin="0 10 0 0 ">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="5*" />
+                        <ColumnDefinition Width="3*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition />
@@ -64,9 +64,9 @@
                         IsReadOnly="True"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Left"
-                        Style="{StaticResource PlaceholderTextBoxStyle}"
-                        Text="{Binding Temperature, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                        Margin="20 20 0 0" />
+                        Style="{StaticResource DetailsTextBoxStyle}"
+                        Text="{Binding Temperature, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                        Margin="20 10 0 0" />
 
                     <TextBlock
                         Grid.Row="1"
@@ -78,9 +78,9 @@
                         Grid.Column="1"
                         IsReadOnly="True"
                         HorizontalAlignment="Left"
-                        Margin="20 20 0 0"
-                        Style="{StaticResource PlaceholderTextBoxStyle}"
-                        Text="{Binding Humidity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        Margin="20 10 0 0"
+                        Style="{StaticResource DetailsTextBoxStyle}"
+                        Text="{Binding Humidity, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
                     <TextBlock
                         Grid.Row="2"
                         Grid.Column="0"
@@ -91,9 +91,10 @@
                         Grid.Column="1"
                         IsReadOnly="True"
                         HorizontalAlignment="Left"
-                        Margin="20 20 0 0"
-                        Style="{StaticResource PlaceholderTextBoxStyle}"
-                        Text="{Binding CarbonDioxideLevel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        Margin="20 10 0 0"
+                        
+                        Style="{StaticResource DetailsTextBoxStyle}"
+                        Text="{Binding CarbonDioxideLevel, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
                     <TextBlock
                         Grid.Row="3"
                         Grid.Column="0"
@@ -104,9 +105,10 @@
                         Grid.Column="1"
                         IsReadOnly="True"
                         HorizontalAlignment="Left"
-                        Margin="20 20 0 0"
-                        Style="{StaticResource PlaceholderTextBoxStyle}"
-                        DataContext="{Binding LightLevel}" />
+                        Margin="20 10 0 0"
+                        
+                        Style="{StaticResource DetailsTextBoxStyle}"
+                        Text="{Binding LightLevel, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
                 </Grid>
             </Grid>
         </Grid>
