--- a/Components/CreateConfiguration/DeviceConfiguration.xaml
+++ b/Components/CreateConfiguration/DeviceConfiguration.xaml
@@ -45,7 +45,7 @@
             Placeholder="Enter some number..."
             x:Name="WaterConsumptionTextBox"
             Style="{StaticResource PlaceholderTextBoxStyle}"
-            DataContext="{Binding HumidifierWaterConsumption}" />
+            Text="{Binding HumidifierWaterConsumption}" />
 
         <Label
             Grid.Row="3"
@@ -77,7 +77,7 @@
             Placeholder="Enter some number..."
             x:Name="PurificatorAirFlowTextBox"
             Style="{StaticResource PlaceholderTextBoxStyle}"
-            DataContext="{Binding PurificatorAirFlow}" />
+            Text="{Binding PurificatorAirFlow}" />
 
         <Label
             Grid.Row="6"
@@ -94,11 +94,11 @@
         <RadioButton
             Grid.Row="6"
             GroupName="PurificatorRadioButtons"
-            IsChecked="{Binding PurificatorStatus, Converter={StaticResource RadioButtonCheckedConverter},
-            ConverterParameter={x:Static local:DeviceMode.Off}}"
             HorizontalAlignment="Right"
             Margin="0 10 0 0"
-            Content="Off" />
+            Content="Off" 
+            IsChecked="{Binding PurificatorStatus, Converter={StaticResource RadioButtonCheckedConverter},
+            ConverterParameter={x:Static local:DeviceMode.Off}}"/>
 
         <Label
             Grid.Row="7"
@@ -114,7 +114,7 @@
             Placeholder="Enter some number..."
             x:Name="ConditionerAirFlowTextBox"
             Style="{StaticResource PlaceholderTextBoxStyle}"
-            DataContext="{Binding ConditionerAirFlow}" />
+            Text="{Binding ConditionerAirFlow}" />
 
         <Label
             Grid.Row="9"
@@ -125,7 +125,7 @@
             Placeholder="Enter some number..."
             x:Name="ConditionerTemperatureTextBox"
             Style="{StaticResource PlaceholderTextBoxStyle}"
-            DataContext="{Binding ConditionerTemperature}" />
+            Text="{Binding ConditionerTemperature}" />
 
         <Label
             Grid.Row="10"
