--- a/ui/Views/ConfigurationCreationView.xaml
+++ b/ui/Views/ConfigurationCreationView.xaml
@@ -8,8 +8,9 @@
         xmlns:viewmodels="clr-namespace:ClimateControlSystem.ui.ViewModel.ConfigurationCreation"
         d:DataContext="{d:DesignInstance Type=viewmodels:ConfigurationCreationViewModel}"
         mc:Ignorable="d"
+        FontSize="14"
         Title="CreateConfiguration" Height="675" Width="1200">
-    
+
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="8*" />
@@ -28,15 +29,34 @@
                 Grid.Column="1"
                 DataContext="{Binding DeviceViewModel}" />
         </Grid>
+        <Grid Grid.Row="1" Margin="40 0 40 0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
 
-        <Button
-            Grid.Row="1"
-            Content="Add room" Style="{StaticResource ButtonStyle}"
-            Command="{Binding AddRoomCommand}" />
-        <Button
-            Grid.Row="1"
-            HorizontalAlignment="Right"
-            Content="Finish" Style="{StaticResource ButtonStyle}"
-            Command="{Binding CreateConfigurationCommand}" />
+            <Label Grid.Column="0"
+                   Content="Path"
+                   HorizontalAlignment="Left"
+                   VerticalAlignment="Center" />
+            <components:PlaceholderTextBox
+                Grid.Column="0"
+                MinWidth="500"
+                Placeholder="Enter path for configuration..."
+                Text="{Binding Path}"
+                VerticalAlignment="Center"
+                Style="{StaticResource PlaceholderTextBoxStyle}" />
+            <Button
+                Grid.Column="1"
+                Content="Add room"
+                Style="{StaticResource ButtonStyle}"
+                Command="{Binding AddRoomCommand}" />
+            <Button
+                Grid.Column="1"
+                HorizontalAlignment="Right"
+                Content="Create"
+                Style="{StaticResource ButtonStyle}"
+                Command="{Binding CreateConfigurationCommand}" />
+        </Grid>
     </Grid>
 </Window>
