--- a/ui/Views/ClimateControlSystemView.xaml
+++ b/ui/Views/ClimateControlSystemView.xaml
@@ -3,11 +3,25 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:components="clr-namespace:ClimateControlSystem.Components"
-        xmlns:system="clr-namespace:ClimateControlSystem.ui.ViewModel.ClimateControlSystem"
-        d:DataContext="{d:DesignInstance Type=system:ClimateControlSystemViewModel}"
+        xmlns:viewmodels="clr-namespace:ClimateControlSystem.ui.ViewModel.ClimateControlSystem"
+        xmlns:views="clr-namespace:ClimateControlSystem.ui.Views"
+        d:DataContext="{d:DesignInstance Type=viewmodels:ClimateControlSystemViewModel}"
         mc:Ignorable="d"
         Title="ClimateControlSystemView" Height="700" Width="1200">
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type viewmodels:RoomDetailsViewModel}">
+            <views:RoomDetailsView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodels:ConditionerDetailsViewModel}">
+            <views:ConditionerDetailsView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodels:HumidifierDetailsViewModel}">
+            <views:HumidifierDetailsView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodels:PurificatorDetailsViewModel}">
+            <views:PurificatorDetailsView />
+        </DataTemplate>
+    </Window.Resources>
     <Grid Margin="20 0 20 20">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -44,8 +58,81 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
-            <components:Listing Grid.Column="0" DataContext="{Binding ListingViewModel}" />
-            <components:Details Grid.Column="1" DataContext="{Binding DetailsViewModel}" Margin="20 0 0 0" />
+            <Grid Margin="0 20 0 0">
+                <Border
+                    BorderBrush="Gray"
+                    BorderThickness="1"
+                    CornerRadius="5">
+                    <Grid>
+                        <ListView BorderThickness="0"
+                                  HorizontalAlignment="Stretch"
+                                  ItemsSource="{Binding RoomListingItemViewModels}"
+                                  SelectedItem="{Binding SelectedRoomListingItemViewModel}"
+                                  SelectionMode="Single">
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="ListViewItem">
+                                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                </Style>
+                            </ListView.ItemContainerStyle>
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <Border
+                                        Padding="10"
+                                        TextBlock.FontSize="16">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition />
+                                                <ColumnDefinition />
+                                            </Grid.ColumnDefinitions>
+
+                                            <TextBlock Grid.Column="0" HorizontalAlignment="Left" Text="{Binding Name}" />
+                                            <Menu Grid.Column="1" HorizontalAlignment="Right">
+
+                                                <Menu.ItemContainerStyle>
+                                                    <Style TargetType="MenuItem">
+                                                        <Setter Property="Padding" Value="20 5" />
+                                                    </Style>
+                                                </Menu.ItemContainerStyle>
+                                                <MenuItem Header="_Conditioners">
+                                                    <ListView BorderThickness="0"
+                                                              HorizontalAlignment="Stretch"
+                                                              ItemsSource="{Binding ConditionerListingItemViewModels}"
+                                                              SelectedItem="{Binding SelectedD}"
+                                                              SelectionMode="Single">
+                                                        <ListView.ItemContainerStyle>
+                                                            <Style TargetType="ListViewItem">
+                                                                <Setter Property="HorizontalContentAlignment"
+                                                                        Value="Stretch" />
+                                                            </Style>
+                                                        </ListView.ItemContainerStyle>
+                                                        <ListView.ItemTemplate>
+                                                            <DataTemplate>
+                                                                <Border
+                                                                    Padding="10"
+                                                                    TextBlock.FontSize="12">
+                                                                    <Grid>
+                                                                        <TextBlock Grid.Column="0"
+                                                                            HorizontalAlignment="Left"
+                                                                            Text="{Binding Name}" />
+                                                                    </Grid>
+                                                                </Border>
+                                                            </DataTemplate>
+                                                        </ListView.ItemTemplate>
+                                                    </ListView>
+                                                </MenuItem>
+                                            </Menu>
+                                        </Grid>
+                                    </Border>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </Grid>
+                </Border>
+            </Grid>
+
+            <Border Grid.Column="1" BorderBrush="Gray" BorderThickness="1" CornerRadius="5" Margin="20 20 0 0">
+                <ContentControl Content="{Binding _selectedViewModel}" Margin="20" />
+            </Border>
         </Grid>
     </Grid>
 </Window>
