--- a/ui/Views/ConditionerDetailsView.xaml
+++ b/ui/Views/ConditionerDetailsView.xaml
@@ -1,15 +1,13 @@
-﻿<UserControl x:Class="ClimateControlSystem.ui.Views.RoomDetailsView"
+﻿<UserControl x:Class="ClimateControlSystem.ui.Views.ConditionerDetailsView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:viewmodel="clr-namespace:ClimateControlSystem.ui.ViewModel.ClimateControlSystem"
-      d:DataContext="{d:DesignInstance Type=viewmodel:RoomDetailsViewModel}"
+      xmlns:local="clr-namespace:ClimateControlSystem.ui.Views"
       mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800"
-      FontSize="14">
-
+      Height="450" Width="800">
     <Grid>
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
@@ -19,26 +17,26 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" FontSize="32" Text="Room" />
+        <TextBlock Grid.Row="0" FontSize="32" Text="Conditioner" />
 
         <Grid Grid.Row="1" Margin="0 10 0 0 ">
-            <Grid>
+            <Grid Width="Auto">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
                 <TextBlock
                     Grid.Column="0"
                     Grid.Row="0"
                     VerticalAlignment="Center"
-                    Text="Temperature" />
+                    Text="Working temperature" />
 
                 <TextBox
                     Grid.Row="0"
@@ -47,14 +45,14 @@
                     VerticalAlignment="Center"
                     HorizontalAlignment="Left"
                     Style="{StaticResource DetailsTextBoxStyle}"
-                    Text="{Binding Temperature, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                    Text="{Binding WorkingTemperature, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                     Margin="20 10 0 0" />
 
                 <TextBlock
                     Grid.Row="1"
                     Grid.Column="0"
                     VerticalAlignment="Center"
-                    Text="Humidity" />
+                    Text="Air flow" />
                 <TextBox
                     Grid.Row="1"
                     Grid.Column="1"
@@ -62,35 +60,35 @@
                     HorizontalAlignment="Left"
                     Margin="20 10 0 0"
                     Style="{StaticResource DetailsTextBoxStyle}"
-                    Text="{Binding Humidity, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                    Text="{Binding ConditionerAirFlow, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
                 <TextBlock
                     Grid.Row="2"
                     Grid.Column="0"
                     VerticalAlignment="Center"
-                    Text="Carbon Dioxide" />
-                <TextBox
-                    Grid.Row="2"
-                    Grid.Column="1"
-                    IsReadOnly="True"
-                    HorizontalAlignment="Left"
-                    Margin="20 10 0 0"
+                    Text="Conditioner mode" />
 
-                    Style="{StaticResource DetailsTextBoxStyle}"
-                    Text="{Binding CarbonDioxideLevel, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBox Grid.Row="2" Grid.Column="1" x:Name="ConditionerModeComboBox"
+                         Style="{StaticResource DetailsTextBoxStyle}"
+                         Padding="15 5"
+                         IsReadOnly="True"
+                         HorizontalAlignment="Left"
+                         Margin="20 10 0 0"
+                         Text="{Binding ConditionerMode, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+
+
                 <TextBlock
                     Grid.Row="3"
                     Grid.Column="0"
                     VerticalAlignment="Center"
-                    Text="Light Level" />
+                    Text="Is on?" />
                 <TextBox
                     Grid.Row="3"
                     Grid.Column="1"
                     IsReadOnly="True"
                     HorizontalAlignment="Left"
                     Margin="20 10 0 0"
-
                     Style="{StaticResource DetailsTextBoxStyle}"
-                    Text="{Binding LightLevel, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                    Text="{Binding ConditionerStatus, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
             </Grid>
         </Grid>
     </Grid>
