--- a/ui/Views/PurificatorDetailsView.xaml
+++ b/ui/Views/PurificatorDetailsView.xaml
@@ -1,17 +1,20 @@
 ﻿<UserControl x:Class="ClimateControlSystem.ui.Views.PurificatorDetailsView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:ClimateControlSystem.ui.Views"
-      mc:Ignorable="d"
-      Height="450" Width="800">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:ClimateControlSystem.ui.Views"
+             xmlns:viewmodels="clr-namespace:ClimateControlSystem.ui.ViewModel.ClimateControlSystem"
+             d:DataContext="{d:DesignInstance Type=viewmodels:PurificatorDetailsViewModel}"
+             mc:Ignorable="d"
+             Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
@@ -25,6 +28,7 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
@@ -47,19 +51,6 @@
                     Margin="20 10 0 0" />
 
                 <TextBlock
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    VerticalAlignment="Center"
-                    Text="Expected carbon dioxide" />
-                <TextBox
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    IsReadOnly="True"
-                    HorizontalAlignment="Left"
-                    Margin="20 10 0 0"
-                    Style="{StaticResource DetailsTextBoxStyle}"
-                    Text="{Binding ExpectedCarbonDioxide, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
-                <TextBlock
                     Grid.Row="2"
                     Grid.Column="0"
                     VerticalAlignment="Center"
@@ -70,6 +61,9 @@
                          Margin="20 10 0 0"
                          Style="{StaticResource DetailsTextBoxStyle}"
                          Text="{Binding PurificatorStatus, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+
+                <Button Grid.Row="3" Grid.Column="1" Command="{Binding EditCommand}" HorizontalAlignment="Right"
+                        MinHeight="30" MinWidth="100" Content="Edit" Margin="20 10 0 0" />
             </Grid>
         </Grid>
     </Grid>
