--- a/ui/Views/ConditionerDetailsEditView.xaml
+++ b/ui/Views/ConditionerDetailsEditView.xaml
@@ -51,13 +51,11 @@
                              HorizontalAlignment="Right"
                              Margin="0 10 60 0"
                              Content="On"
-                             IsChecked="{Binding Status, Converter={StaticResource RadioButtonCheckedConverter}, 
-            ConverterParameter={x:Static climateControlSystemNamespace:DeviceMode.On}}" />
+                             IsChecked="{Binding Status}" />
                 <RadioButton Grid.Column="1" GroupName="ConditionerRadioButtons" HorizontalAlignment="Right"
                              Margin="0 10 0 0"
                              Content="Off"
-                             IsChecked="{Binding Status, Converter={StaticResource RadioButtonCheckedConverter}, 
-            ConverterParameter={x:Static climateControlSystemNamespace:DeviceMode.Off}}" />
+                             IsChecked="{Binding Status, Converter={StaticResource RadioButtonCheckedConverter}}" />
             </Grid>
             <Grid Margin="0 20 0 0">
                 <Grid.ColumnDefinitions>
