--- a/ui/Views/HumidifierDetailsEditView.xaml
+++ b/ui/Views/HumidifierDetailsEditView.xaml
@@ -25,17 +25,14 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="Humidifier Status"></TextBlock>
                 <RadioButton Grid.Column="1"
-                             GroupName="HumidifierRadioButtons"
-                             HorizontalAlignment="Right"
-                             Margin="0 10 60 0"
-                             Content="On"
-                             IsChecked="{Binding HumidifierDeviceMode, Converter={StaticResource RadioButtonCheckedConverter}, 
-            ConverterParameter={x:Static climateControlSystemNamespace:DeviceMode.On}}" />
-                <RadioButton Grid.Column="1" GroupName="HumidifierRadioButtons" HorizontalAlignment="Right"
-                             Margin="0 10 0 0"
+                    GroupName="HumidifierRadioButtons"
+                    HorizontalAlignment="Right"
+                    Margin="0 10 60 0"
+                    Content="On"
+                    IsChecked="{Binding Status}"/>
+                <RadioButton Grid.Column="1" GroupName="HumidifierRadioButtons" HorizontalAlignment="Right" Margin="0 10 0 0"
                              Content="Off"
-                             IsChecked="{Binding HumidifierStatus, Converter={StaticResource RadioButtonCheckedConverter}, 
-            ConverterParameter={x:Static climateControlSystemNamespace:DeviceMode.Off}}" />
+                             IsChecked="{Binding Status, Converter={StaticResource RadioButtonCheckedConverter}}" />
             </Grid>
             <Grid Margin="0 20 0 0">
                 <Grid.ColumnDefinitions>
