--- a/ui/Views/PurificatorDetailsEditView.xaml
+++ b/ui/Views/PurificatorDetailsEditView.xaml
@@ -26,12 +26,10 @@
                     HorizontalAlignment="Right"
                     Margin="0 10 60 0"
                     Content="On"
-                    IsChecked="{Binding PurificatorDeviceMode, Converter={StaticResource RadioButtonCheckedConverter}, 
-            ConverterParameter={x:Static climateControlSystemNamespace:DeviceMode.On}}" />
+                    IsChecked="{Binding Status}"/>
                 <RadioButton Grid.Column="1" GroupName="PurificatorRadioButtons" HorizontalAlignment="Right" Margin="0 10 0 0"
                              Content="Off"
-                             IsChecked="{Binding PurificatorStatus, Converter={StaticResource RadioButtonCheckedConverter}, 
-            ConverterParameter={x:Static climateControlSystemNamespace:DeviceMode.Off}}" />
+                             IsChecked="{Binding Status, Converter={StaticResource RadioButtonCheckedConverter}}" />
             </Grid>
             <Grid Margin="0 20 0 0">
                 <Grid.ColumnDefinitions>
