--- a/ui/Views/RoomDetailsView.xaml
+++ b/ui/Views/RoomDetailsView.xaml
@@ -1,13 +1,13 @@
 ﻿<UserControl x:Class="ClimateControlSystem.ui.Views.RoomDetailsView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:viewmodel="clr-namespace:ClimateControlSystem.ui.ViewModel.ClimateControlSystem"
-      d:DataContext="{d:DesignInstance Type=viewmodel:RoomDetailsViewModel}"
-      mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800"
-      FontSize="14">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:viewmodel="clr-namespace:ClimateControlSystem.ui.ViewModel.ClimateControlSystem"
+             d:DataContext="{d:DesignInstance Type=viewmodel:RoomDetailsViewModel}"
+             mc:Ignorable="d"
+             d:DesignHeight="450" d:DesignWidth="800"
+             FontSize="14">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -137,8 +137,23 @@
 
                     Style="{StaticResource DetailsTextBoxStyle}"
                     Text="{Binding ExpectedCarbonDioxide, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
-                <Button Grid.Row="7" Grid.Column="1" Command="{Binding EditCommand}" HorizontalAlignment="Right" MinHeight="30" MinWidth="100" Content="Edit" Margin="20 10 0 0"/>
+                <Button Grid.Row="7" Grid.Column="1" Command="{Binding EditCommand}" HorizontalAlignment="Right"
+                        MinHeight="30" MinWidth="100" Content="Edit" Margin="20 10 0 0" />
             </Grid>
         </Grid>
+        <Canvas Grid.Column="1" Grid.RowSpan="2" Width="450" Height="300" HorizontalAlignment="Right">
+            <Polyline
+                Points="{Binding TemperaturePoints}"
+                Stroke="DodgerBlue"
+                StrokeThickness="2" />
+            <Polyline
+                Points="{Binding HumidityPoints}"
+                Stroke="Coral"
+                StrokeThickness="2" />
+            <Polyline
+                Points="{Binding CarbonDioxidePoints}"
+                Stroke="Indigo"
+                StrokeThickness="2" />
+        </Canvas>
     </Grid>
 </UserControl>
